...
      setIsLoading(false);
    }
  };

  return (
    <SafeAreaProvider>
      <SafeAreaView testID="send-ln-address-screen" className="flex-1 bg-white dark:bg-charcoal-950">
        <Stack.Screen
          options={{
            headerTitle: () => LightningPaymentScreenHeaderTitle(t('lightningPayment.title')),
            headerTitleAlign: 'center',
            headerLeft: HeaderLeft,
            headerShadowVisible: false,
...
        />
        <FocusAwareStatusBar />
        <ScrollView className="flex-1 px-4 pt-8">
          <View className="mb-2">
            <View className="relative">
              <Input
                testID="send-ln-address-input"
                value={invoiceInput}
                onChangeText={handleInvoiceChange}
                placeholder={t('lightningPayment.placeholder')}
                multiline
                textAlignVertical="top"
                autoCapitalize="none"
...
          </View>

          {isLoading && <ActivityIndicator size="small" color={colors.primary[600]} />}

          <View>
            <Button
              testID="send-ln-address-continue"
              label={isLoading ? t('lightningPayment.processing') : t('lightningPayment.payButton')}
              onPress={handlePayment}
              fullWidth={true}
              variant="secondary"
              textClassName="text-base font-bold text-white"
              size="lg"
...
