...
  "about": {
    "error_generic": "An error occurred while opening the link",
    "error_rating": "Unable to open the store to rate the app.",
    "error_title": "Error",
    "error_unable_link": "Unable to open the link: {{url}}",
    "header_title": "About",
    "privacy_policy": "Privacy Policy",
    "rate_our_app": "Rate our App",
    "terms_of_service": "Terms of Service",
    "version": "Version {{version}}",
    "visit_website": "Visit Website"
  },
  "addressConfig": {
    "amount": "Amount (optional)",
    "note": "Note (optional)",
...
  "language": {
    "header_title": "Languages",
    "info_text": "Language changes will be applied immediately to the interface"
  },
  "lightningPayment": {
    "errors": {
      "bitcoinNotSupported": "Sorry, payment to a Bitcoin address is not supported yet",
      "invalidInvoice": "Please enter a valid Lightning invoice",
      "lightningAddressNotSupported": "Sorry, we do not support Lightning Address payments",
      "preparePaymentFailed": "Unable to prepare payment. Invalid address",
      "unsupportedAddress": "Sorry, we do not support this Bitcoin or Lightning address",
      "zeroAmountNotSupported": "Sorry, we do not support zero-amount Lightning payments"
    },
    "payButton": "Continue",
...
