...
    }),
    [t],
  );

  return (
    <SafeAreaProvider>
      <SafeAreaView testID="about-screen" className="flex-1 bg-white dark:bg-charcoal-950">
        <View className="flex h-full">
          <Stack.Screen options={screenOptions} />
          <FocusAwareStatusBar />
          <View className="items-center justify-center py-12">
            <View className="mb-6 items-center">
              <View className="mb-8 size-20 items-center justify-center rounded-full bg-white dark:bg-charcoal-900">
                <Logo />
              </View>
              <Text className="my-6 text-2xl font-bold text-gray-600 dark:text-charcoal-300">Grimm App</Text>
              <Text testID="about-version" className="text-base text-gray-400 dark:text-charcoal-500">
                {t('about.version', { version: Env.VERSION })} {Application.nativeBuildVersion ? `(${Application.nativeBuildVersion})` : null}
              </Text>
            </View>
          </View>
          <View className="flex-1 px-4">
            <AboutItem title={t('about.rate_our_app')} onPress={handleRateApp} />
...
