...

  const openLink = (url: string) => {
    Linking.openURL(url).catch((err) => console.error(`Error opening link: ${url}`, err));
  };

  return (
    <View testID="need-help-support-items" className="mb-6">
      <Item testID="need-help-item-call" title={t('help.talk_us')} icon="call-outline" onPress={() => openLink(supportLinks.call)} />
      <Item testID="need-help-item-email" title={t('help.send_email')} icon="mail-outline" onPress={() => openLink(supportLinks.email)} />
      <Item testID="need-help-item-facebook" title={t('help.facebook')} icon="logo-facebook" onPress={() => openLink(supportLinks.facebook)} />
      <Item testID="need-help-item-linkedin" title={t('help.linkedin')} icon="logo-linkedin" onPress={() => openLink(supportLinks.linkedIn)} />
      <Item testID="need-help-item-twitter" title={t('help.twitter')} icon="logo-twitter" onPress={() => openLink(supportLinks.twitter)} />
    </View>
...
};

export default function NeedHelp() {
  const { t } = useTranslation();
  return (
    <SafeAreaProvider>
      <SafeAreaView testID="need-help-screen" className={`flex-1 ${theme.screen}`}>
        <View testID="need-help-content" className="flex h-full px-4">
          <Stack.Screen
            options={{
              headerShown: true,
              headerTitleAlign: 'center',
              headerTitle: () => <HeaderTitle title={t('help.header')} />,
...
